Implemented a directive for widget states.
- widget states are now handled with a directive
- re-implemented view toolbar button directive
- fixes toolbar button state issues (RM-1352)

--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -21,7 +21,7 @@
 		<button class="btn" ng-click="onShowHelp()"><i class="icon icon-info-sign"></i></button>
 	  </div>
 	  <div class="btn-group" ng-if="toolbar">
-	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn" name="{{btn.name}}">{{btn.title}}</button>
+	  	<button ng-repeat="btn in toolbar" ui-tool-button></button>
 	  </div>
 	  <div ui-view-switcher class="pull-right"></div>
 	  <div class="record-pager pull-right">
