--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -834,3 +834,13 @@ table.field-details .help-text hr {
 .filter-menu input[type=checkbox] {
 	margin-top: 3px;
 }
+
+.btn-group > .btn-fix-left {
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+
+.btn-group > .btn-fix-right {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
