--- a/axelor-web/src/main/webapp/partials/views/calendar.html
+++ b/axelor-web/src/main/webapp/partials/views/calendar.html
@@ -1,19 +1,23 @@
 <div class="calendar-view webkit-scrollbar-all" ng-controller="CalendarViewCtrl">
-  <div class="record-toolbar btn-toolbar">
-	  <div class="btn-group">
-	    <button class="btn" ng-click="onMode('month')" ng-class="{ active: isMode('month') }"><span x-translate>Month</span></button>
-	    <button class="btn" ng-click="onMode('week')" ng-class="{ active: isMode('week') }"><span x-translate>Week</span></button>
-	    <button class="btn" ng-click="onMode('day')" ng-class="{ active: isMode('day') }"><span x-translate>Day</span></button>
-	  </div>
-	  <div ui-view-switcher class="pull-right"></div>
-	  <div class="record-pager pull-right">
-	    <span ng-bind-html-unsafe="pagerText()"></span>
-	    <button class="btn" ng-click="onToday()"><span x-translate>Today</span></button>
-	    <div class="btn-group">
-	      <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()"><i class="icon-chevron-left"></i></button>
-	      <button class="btn" ng-disabled="!canNext()" ng-click="onNext()"><i class="icon-chevron-right"></i></button>
-	    </div>
-	  </div>
-	</div><!--/.btn-toolbar -->
+  <div class="navbar record-toolbar">
+    <div class="navbar-inner">
+      <div class="container">
+  	    <div class="btn-group">
+  	      <button class="btn" ng-click="onMode('month')" ng-class="{ active: isMode('month') }"><span x-translate>Month</span></button>
+  	      <button class="btn" ng-click="onMode('week')" ng-class="{ active: isMode('week') }"><span x-translate>Week</span></button>
+  	      <button class="btn" ng-click="onMode('day')" ng-class="{ active: isMode('day') }"><span x-translate>Day</span></button>
+  	    </div>
+  	    <div ui-view-switcher class="pull-right"></div>
+  	    <div class="record-pager pull-right">
+  	      <span ng-bind-html-unsafe="pagerText()"></span>
+  	      <button class="btn" ng-click="onToday()"><span x-translate>Today</span></button>
+  	      <div class="btn-group">
+  	        <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()"><i class="icon-chevron-left"></i></button>
+  	        <button class="btn" ng-disabled="!canNext()" ng-click="onNext()"><i class="icon-chevron-right"></i></button>
+  	      </div>
+  	    </div>
+      </div>
+    </div>
+  </div>
   <div ui-view-calendar x-handler="this"></div>
 </div>
