--- a/axelor-web/src/main/webapp/partials/views/trail.html
+++ b/axelor-web/src/main/webapp/partials/views/trail.html
@@ -1,18 +1,22 @@
 <div class="trail-view" ng-controller="FormListCtrl">
-	<div class="record-toolbar btn-toolbar">
-		<div class="btn-group">
-			<button class="btn btn-primary" ng-click="onNew()" x-translate>Create new</button>
-			<button class="btn btn-primary" ng-click="onCancel()" x-translate>Cancel</button>
-		</div>
-		<div class="btn-group">
-			<button class="btn btn-danger" ng-click="onReload()" x-translate>Refresh</button>
-		</div>
-	</div>
-	<div ng-show="canCreate()" class="trail-editor">
-		<div ui-trail-editor class="trail-form"></div>
-	</div>
-	<div ng-repeat="item in records" class="trail-form-container">
-		<div ui-trail-form></div>
-		<div ui-trail-form class="trail-child" ng-repeat="item in item.$children"></div>
-	</div>
+  <div class="navbar record-toolbar">
+    <div class="navbar-inner">
+      <div class="container">
+        <div class="btn-group">
+          <button class="btn btn-primary" ng-click="onNew()" x-translate>Create new</button>
+          <button class="btn btn-primary" ng-click="onCancel()" x-translate>Cancel</button>
+        </div>
+        <div class="btn-group">
+          <button class="btn btn-danger" ng-click="onReload()" x-translate>Refresh</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div ng-show="canCreate()" class="trail-editor">
+    <div ui-trail-editor class="trail-form"></div>
+  </div>
+  <div ng-repeat="item in records" class="trail-form-container">
+    <div ui-trail-form></div>
+    <div ui-trail-form class="trail-child" ng-repeat="item in item.$children"></div>
+  </div>
 </div>
