--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -2,6 +2,7 @@
   <div class="navbar record-toolbar">
     <div class="navbar-inner">
       <div class="container">
+        <div ui-menu-bar menus="menubar" handler="this"></div>
         <div class="btn-group">
           <button class="btn" ng-click="onNew()" ng-if="hasButton('new')" ng-disabled="canSave()">
             <i class="icon icon-file"></i> <span x-translate>New</span>
