--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -4,15 +4,29 @@
       <div class="container">
         <div ui-menu-bar menus="menubar" handler="this"></div>
         <div class="btn-group">
-          <button class="btn" ng-click="onNew()" ng-if="hasButton('new')"><i class="icon icon-file"></i> <span x-translate>New</span></button>
-          <button class="btn" ng-click="onEdit()" ng-if="hasButton('edit') && canEdit()"><i class="icon icon-pencil"></i> <span x-translate>Edit</span></button>
-          <button class="btn" ng-click="onSave()" ng-if="hasButton('save') && !canEdit()"><i class="icon icon-save"></i> <span x-translate>Save</span></button>
-          <button class="btn" ng-click="onCopy()" ng-if="hasButton('copy') && canEdit()" ng-disabled="!canCopy()"><i class="icon icon-copy"></i> <span x-translate>Copy</span></button>
-          <button class="btn" ng-click="onCancel()" ng-if="hasButton('cancel') && !canEdit()" ng-disabled="!canCancel()"><i class="icon icon-ban-circle"></i> <span x-translate>Cancel</span></button>
+          <button class="btn" ng-click="onNew()" ng-if="hasButton('new')" title="{{ 'New' | t}}">
+            <i class="icon icon-file"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
+          </button>
+          <button class="btn" ng-click="onEdit()" ng-if="hasButton('edit') && canEdit()" title="{{ 'Edit' | t}}">
+            <i class="icon icon-pencil"></i> <span ng-hide="tbTitleHide" x-translate>Edit</span>
+          </button>
+          <button class="btn" ng-click="onSave()" ng-if="hasButton('save') && !canEdit()"  title="{{ 'Save' | t}}">
+            <i class="icon icon-save"></i> <span ng-hide="tbTitleHide" x-translate>Save</span>
+          </button>
+          <button class="btn" ng-click="onCopy()" ng-if="hasButton('copy') && canEdit()" ng-disabled="!canCopy()" title="{{ 'Copy' | t}}">
+            <i class="icon icon-copy"></i> <span ng-hide="tbTitleHide" x-translate>Copy</span>
+          </button>
+          <button class="btn" ng-click="onCancel()" ng-if="hasButton('cancel') && !canEdit()" ng-disabled="!canCancel()" title="{{ 'Cancel' | t}}">
+            <i class="icon icon-ban-circle"></i> <span ng-hide="tbTitleHide" x-translate>Cancel</span>
+          </button>
         </div>
         <div class="btn-group">
-          <button class="btn" ng-click="onBack()" ng-if="hasButton('back')" ng-disabled="!canBack()"><i class="icon icon-reply"></i> <span x-translate>Back</span></button>
-          <button class="btn" ng-click="onRefresh()" ng-if="hasButton('refresh')"><i class="icon icon-refresh"></i> <span x-translate>Refresh</span></button>
+          <button class="btn" ng-click="onBack()" ng-if="hasButton('back')" ng-disabled="!canBack()" title="{{ 'Back' | t}}">
+            <i class="icon icon-reply"></i> <span ng-hide="tbTitleHide" x-translate>Back</span>
+          </button>
+          <button class="btn" ng-click="onRefresh()" ng-if="hasButton('refresh')" title="{{ 'Refresh' | t}}">
+            <i class="icon icon-refresh"></i> <span ng-hide="tbTitleHide" x-translate>Refresh</span>
+          </button>
         </div>
         <div class="btn-group" ng-if="hasAuditLog()">
           <button class="btn" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
