--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -397,12 +397,18 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 	top: 46px; left: 0px; right: 0px; bottom: 0px;
 }
 
+.record-toolbar {
+	margin-top: 2px;
+	margin-bottom: 4px;
+}
+
 .record-toolbar .navbar-inner {
+	min-height: 38px;
 
 	border: 1px solid #d4d4d4;
 	border-left: none;
 	border-right: none;
-	
+
 	background-color: #f5f5f5;
 	background-image: none;
 	border-radius: 0;
@@ -426,11 +432,16 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 	padding-left: 6px;
 }
 
+.record-toolbar .dropdown a.dropdown-toggle {
+	padding: 4px 8px 4px;
+	margin-top: 6px;
+}
+
 .record-pager-text {
 	display: inline-block;
-	margin-top: 4px;
-	margin-left: 4px;
-	margin-right: 4px;
+	margin-top: 9px;
+	margin-left: 8px;
+	margin-right: 8px;
 	font-size: 13px;
 }
 
