--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -4,7 +4,7 @@
 	<div class="nav-tabs-scroll-r"><a href="#"><i class="icon-chevron-right"></i></a></div>
 	<div class="nav-tabs-strip">
 	<ul class="nav nav-tabs nav-tabs-scrollable nav-tabs-closable">
-	 <li ng-repeat="tab in tabs" ng-class="{ active: tab.selected, inactive: !tab.selected }">
+	 <li ng-repeat="tab in navTabs" ng-class="{ active: tab.selected, inactive: !tab.selected }">
 	   <a href="" ng-click="navClick(tab)">
 	     <img class="prefix-icon" ng-show="tab.icon" ng-src="{{tab.icon}}"><span>{{tab.title}}</span>
 	   </a>
@@ -14,7 +14,7 @@
 	</div>
   </div>
   <div class="view-content">
-    <div class="view-pane" ng-show="tab.selected" ng-repeat="tab in tabs" ng-controller="ViewCtrl">
+    <div class="view-pane" ng-show="tab.selected" ng-repeat="tab in navTabs" ng-controller="ViewCtrl">
     	<div class="view-container" ng-show="selectedTab.viewType == view.type" ng-repeat="view in tab.views"
     		ng-include src="'partials/views/'+ view.type +'.html'"></div>
     </div>
