moved view menu bar (issue RM-1409)

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -621,3 +621,10 @@ img.prefix-icon {
 	font-size: 13px !important;
 	margin-bottom: 0;
 }
+
+.record-toolbar .menu-bar {
+	display: inline-block;
+	float: inherit;
+	vertical-align: middle;
+	white-space: nowrap;
+}
