--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -38,7 +38,10 @@
         </div>
         <div ui-menu-bar menus="menubar" handler="this"></div>
         <div class="btn-group" ng-if="toolbar">
-          <button ng-repeat="btn in toolbar" ui-tool-button></button>
+          <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
+        </div>
+        <div class="btn-group" ng-if="toolbar" style="display: none;">
+          <button ng-repeat="btn in toolbar | filter:{custom: false}" ui-tool-button></button>
         </div>
         <div ui-view-switcher class="pull-right"></div>
         <div ui-record-pager class="pull-right"></div>
